# set-switch

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
configs/: flashrag.yaml  flashrag_decoder.yaml  flashrag_setfuse.yaml  flashrag_setllm.yaml  flashrag_setswitch.yaml
data/: README.md
docs/: data_formats_and_prompts.md
outputs/: README.md
scripts/: check_sdpa_mask_equivalence.py  debug_mask.py  estimate_context.py  evaluate.py  inspect_batch.py  make_results_table.py  prepare_dataset_suite.py  report_gold_length_bias.py  train.py
src/set_switch/: __init__.py  config_validation.py  constants.py
src/set_switch/data/: __init__.py  baseline_render.py  collator.py  dataset_suite.py  length_diagnostic.py  length_filter.py  plain_collator.py  render.py  schema.py  setfuse_collator.py  setfuse_render.py  setllm_collator.py  setllm_render.py  truncation.py
src/set_switch/eval/: __init__.py  official_metrics.py
src/set_switch/modeling/: __init__.py  attention_mask.py  layer_masking.py  load_model.py  peft_setup.py  position_ids.py  setfuse_attention_mask.py  (+2 more)
tests/: conftest.py  test_attention_mask.py  test_baseline_render.py  test_config_validation.py  test_dataset_suite.py  test_evaluate_generation.py  test_forward_smoke.py  test_io.py  test_labels.py  test_length_filter.py  test_mask_dtype_policy.py  test_metric_logging.py  test_official_metrics.py  test_position_ids.py  test_render.py  test_setfuse.py  test_setllm.py  test_special_tokens.py  test_tiny_overfit.py  test_trainable_policy.py  test_training_iterator.py  test_truncation.py
(+8 files in other folders)
